fix(css): attempt to fix horizontal scroll issues
this seemed to help in some cases, so i put it in…

--- a/modules/common/sidemenu/cc-side-menu.scss
+++ b/modules/common/sidemenu/cc-side-menu.scss
@@ -98,5 +98,6 @@
 
     .snap-content{
         position: static;
+        overflow-x:hidden; // probably solves some untraceable scrolling bugs
     }
 }
